syntax = "proto3";

option csharp_namespace = "Senha.Grpc.Protos";

service SenhaService {
	rpc GetSenha (GetSenhaRequest) returns (SenhaModel);
	rpc CreateSenha (CreateSenhaRequest) returns (SenhaModel);
	rpc UpdateSenha (UpdateSenhaRequest) returns (SenhaModel);
	rpc DeleteSenha (DeleteSenhaRequest) returns (DeleteSenhaResponse);
}

message SenhaModel {
	string Id = 1;
	int32 IdCliente = 2;
	string SenhaCliente = 3;
	string SenhaClienteCifrada = 4;
	int32 Status = 5;
}

message GetSenhaRequest {
	string Id = 1;
}

message CreateSenhaRequest {
	int32 IdClienteRef =  1;
}

message UpdateSenhaRequest {
	SenhaModel Senha =  1;
}

message DeleteSenhaRequest {
	string Id = 1;
}

message DeleteSenhaResponse {
	bool Successo = 1;
}